# stitchMeshing

./: .gitmodules  CMakeLists.txt  README.md
resources/: shader_curve.frag  shader_curve.vert  shader_mesh.frag  shader_mesh.geo  shader_mesh.vert  shader_orientation_field_tet.frag  shader_orientation_field_tet.geo  shader_orientation_field_tet.vert  shader_orientation_field_tri.geo  shader_orientation_field_tri.vert  shader_orientation_field_v.geo  shader_orientation_field_v.vert  shader_position_field.frag  shader_position_field.vert  shader_sheet.frag  shader_sheet.vert  shader_singularity_tet.frag  shader_singularity_tet.vert  shader_singularity_tri.frag  shader_singularity_tri.geo  shader_singularity_tri.vert  shader_tet.geo  shader_tet.vert
src/: aabb.h  adjacency.h  base_complex.cpp  base_complex.h  batch.cpp  batch.h  bvh.cpp  bvh.h  common.h  dedge.cpp  dedge.h  extract.cpp  extract3D.cpp  global_types.cpp  global_types.h  hierarchy.cpp  hierarchy.h  lock.h  main.cpp  meshio.cpp  meshio.h  optimizer.cpp  optimizer.h  orient_triangle_mesh.cpp  orient_triangle_mesh.h  orientations.cpp  orientations.h  positions.cpp  positions.h  quadratic.h  quat.h  subdivide.cpp  subdivide.h  timer.h  tri_tri_intersection.h  viewer.cpp  viewer.h
src/core/: HE_Face.cpp  HE_Face.h  HE_HalfEdge.cpp  HE_HalfEdge.h  HE_Polyhedron.cpp  HE_Polyhedron.h  HE_Vertex.cpp  HE_Vertex.h  cyPoint.h  dual.cpp  dual.h  mesh_io.cpp  polyhedron_iterators.h  stitchmeshing.cpp  util.cpp  util.h
